[package]
name = "thqm"
description = "A simple HTTP server to serve a dynamic menu for your scripts over the network."
version = "0.2.1"
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["scripting", "http-server", "dynamic-menu"]
categories = ["command-line-utilities", "web-programming::http-server"]
repository = "https://github.com/loiccoyle/thqm-rs"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true
panic = "abort"

[[bin]]
name = "thqm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0.88"
log = "0.4.14"
env_logger = { default-features = false, version = "0.11.0" }
flate2 = "1.0.20"
tar = { default-features = false, version = "0.4.41" }
tera = { default-features = false, version = "1.20.0" }
qrcode = "0.14.0"
image = { version = "0.25.2", features = [
  "jpeg",
  "png",
], default-features = false }
rouille = { version = "3.2.1", default-features = false }
local-ip-address = "0.6.2"

[dev-dependencies]
ctor = "0.2.8"
assert_cmd = "2.0.4"
predicates = "3.1.2"
assert_fs = "1.0.7"
reqwest = { version = "0.12.7", features = ["blocking"] }

[build-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = { version = "4.5.6" }
