[package]
name = "thqm"
description = "A simple HTTP server to serve a dynamic menu for your scripts over the network."
version = "0.5.0"
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["scripting", "http-server", "dynamic-menu"]
categories = ["command-line-utilities", "web-programming::http-server"]
repository = "https://github.com/loiccoyle/thqm-rs"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true
panic = "abort"

[[bin]]
name = "thqm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
clap-verbosity-flag = "2.2.2"

dirs = "5.0.1"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = { default-features = false, version = "0.11.5" }
tera = { default-features = false, version = "1.20.0" }
qrcode = "0.14.1"
image = { version = "0.25.2", features = [
  "jpeg",
  "png",
], default-features = false }
rouille = { version = "3.6.2", default-features = false }
local-ip-address = "0.6.3"
reqwest = { version = "0.12.8", features = [
  "blocking",
  "default-tls",
], default-features = false }
flate2 = "1.0.34"
tar = { version = "0.4.42", default-features = false }

[dev-dependencies]
ctor = "0.2.8"
assert_cmd = "2.0.4"
predicates = "3.1.2"
assert_fs = "1.0.7"
reqwest = { version = "0.12.7", features = ["blocking"] }

[build-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
clap_complete = { version = "4.5.32" }
clap-verbosity-flag = "2.2.2"
